[package]
name = "tarpailin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tarp"
path = "src/main.rs"

[dependencies]
misanthropic = { version = "0.5.1", features = ["rustls-tls", "markdown"], default-features = false }
reqwest = "*"
nanohtml2text = "0.2.1"
itertools = "*"
tokio = { version = "1", features = ["rt", "macros"] }
xflags = "0.3"
fastrand = "2.3.0"
